--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-icons": "^3.9.0",
     "react-rating": "^2.0.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "react-spring": "^8.0.27",
+    "toasted-notes": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
