--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-spring": "^8.0.27",
+    "sass": "^1.25.0",
     "toasted-notes": "^3.2.0"
   },
   "scripts": {
